--- a/sample/src/main/res/layout/number_picker_custom_layout.xml
+++ b/sample/src/main/res/layout/number_picker_custom_layout.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="70dp"
         android:layout_height="match_parent"
-        android:text="1"
+        android:text="@string/display"
         android:textColor="@android:color/black"
         android:focusable="false"
         android:inputType="none"
@@ -21,7 +21,7 @@
         android:padding="0dp"
         android:id="@+id/decrement"
         android:textStyle="bold"
-        android:text="—"/>
+        android:text="@string/decrement"/>
 
     <Button
         android:layout_width="30dp"
@@ -29,6 +29,6 @@
         android:padding="0dp"
         android:textSize="25sp"
         android:id="@+id/increment"
-        android:text="+"/>
+        android:text="@string/increment"/>
 
 </LinearLayout>
