--- a/sample/src/main/res/layout/number_picker_custom_layout.xml
+++ b/sample/src/main/res/layout/number_picker_custom_layout.xml
@@ -5,13 +5,12 @@
     android:layout_height="40dp"
     android:orientation="horizontal">
 
-    <TextView
+    <EditText
         android:layout_width="70dp"
         android:layout_height="match_parent"
         android:text="@string/display"
         android:textColor="@android:color/black"
-        android:focusable="false"
-        android:inputType="none"
+        android:inputType="number"
         android:id="@+id/display"
         android:gravity="center"
         />
